tests/ui/needless_update.stderr
error: struct update has no effect, all the fields in the struct have already been specified
  --> $DIR/needless_update.rs:16:23
   |
16 |     S { a: 1, b: 1, ..base };
   |                       ^^^^
   |
note: lint level defined here
  --> $DIR/needless_update.rs:4:9
   |
4  | #![deny(needless_update)]
   |         ^^^^^^^^^^^^^^^

error: aborting due to previous error

